Update bin-wrapper.sh